# F1-regulation-RAG-2025

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  logs_embeddings.txt  main.py  pyproject.toml  query_f1_regulations.py
alembic/: env.py
alembic/versions/: 597e3fd8f0ba_create_regulations_with_pgvector.py
data/processed/: pdf_appendices.csv  pdf_sections.csv  pdf_text.csv
src/: model.py
src/generation/models/: ollama_model.py
src/generation/retriever/: tools.py
src/processing/: pdf_processing.py  processing_text.ipynb
src/sql/: create_database.sql  insert_regulation.sql
src/utils/: utils.py
