[project]
name = "rag-f1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "pypdf2>=3.0.1",
    "pypdf>=5.9.0",
    "pymupdf>=1.26.3",
    "ipykernel>=6.30.0",
    "langchain-community>=0.3.27",
    "langchain==1.0.3",
    "pyproject-toml>=0.1.0",
    "transformers>=4.55.0",
    "sentence-transformers>=5.1.0",
    "ipywidgets>=8.1.7",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.3",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.3.2",
    "langchain-postgres>=0.0.15",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
]
